# muxwise

./: Cargo.toml  LICENSE.md  README.md  bmad_prompt2product.py  install.sh
.claude/: settings.local.json
_bmad-output/planning-artifacts/: architecture.md  epics.md  prd.md  product-brief-zellij-2026-02-10.md  ux-design-specification.md
_bmad-output/stories/: story-1.1-plugin-scaffold.md  story-1.2-configuration-loading.md  story-1.3-empty-state-display.md  story-1.4-toggle-sidebar.md  story-2.1-timer-scheduling.md  story-2.2-pane-capture.md  story-2.3-claude-api.md  story-2.4-sidebar-display.md  story-2.5-click-navigate.md  story-3.1-json-persistence.md  story-3.2-reattach-trigger.md  story-3.3-graceful-failure.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
default-plugins/about/src/: pages.rs  tips.rs
default-plugins/compact-bar/src/: line.rs
default-plugins/session-intelligence/: Cargo.toml
default-plugins/session-intelligence/src/: capture.rs  main.rs  persistence.rs  sanitize.rs  sidebar.rs  state.rs  summarize.rs
default-plugins/tab-bar/src/: line.rs
docs/: bmad-multi-model-pair-programming.md
src/: commands.rs  main.rs
zellij-client/src/: lib.rs
zellij-server/src/: lib.rs
zellij-utils/assets/config/: default.kdl
zellij-utils/assets/layouts/: default.kdl
zellij-utils/assets/plugins/: about.wasm  (+13 more)
zellij-utils/src/: consts.rs  ipc.rs
(+3 files in other folders)
