[package]
name = "session-intelligence"
version = "0.1.0"
authors = ["Zellij Contributors"]
edition.workspace = true
license.workspace = true
description = "AI-powered session intelligence sidebar for Zellij"

[dependencies]
zellij-tile = { path = "../../zellij-tile" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
